@startuml
skinparam packageStyle rectangle
skinparam shadowing false

' =========================
' USER AGGREGATE
' =========================
package "Aggregate: User" {

  class User <<Aggregate Root>> {
    +id: UUID
    +name: String
    +email: String
    +passwordHash: String
    +role: UserRole
    +active: boolean
  }
}

' =========================
' COURSE AGGREGATE
' =========================
package "Aggregate: Course" {

  class Course <<Aggregate Root>> {
    +id: UUID
    +code: String
    +title: String
    +description: String
  }

  class Enrollment {
    +id: UUID
    +enrolledAt: DateTime
  }

  class ClassSession {
    +id: UUID
    +title: String
    +scheduledAt: DateTime
    +topic: String
  }

  class Resource {
    +id: UUID
    +title: String
    +type: ResourceType
    +filePath: String
    +uploadedAt: DateTime
  }

  Course *-- Enrollment
  Course *-- ClassSession
  Course *-- Resource
}

' =========================
' ASSIGNMENT AGGREGATE (CORRIGIDO)
' =========================
package "Aggregate: Assignment" {

  class Assignment <<Aggregate Root>> {
    +id: UUID
    +title: String
    +description: String
    +deadline: DateTime
  }

  class Submission {
    +id: UUID
    +submittedAt: DateTime
    +status: SubmissionStatus
    +filePath: String
    +grade: Decimal
    +feedback: String
  }

  Assignment *-- Submission
}

' =========================
' CHAT AGGREGATE
' =========================
package "Aggregate: Chat" {

  class ChatRoom <<Aggregate Root>> {
    +id: UUID
    +name: String
  }

  class ChatMessage {
    +id: UUID
    +content: String
    +sentAt: DateTime
  }

  ChatRoom *-- ChatMessage
}

' =========================
' CROSS-AGGREGATE RELATIONS
' =========================

User "1" -- "0..*" Enrollment
User "1" -- "0..*" Submission : submits >

Course "1" -- "0..*" Assignment
Course "1" -- "0..*" ChatRoom

User "1" -- "0..*" ChatMessage : sends >

@enduml